--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,7 +1,8 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    Started out as a geographer, fell in love with geospatial data and am now working on machine learning, natural language
-    processing (NLP) and GIS using python, postgresql and docker in AWS serverless environments. I have proven experience in
-    data engineering and ETL designing, building, testing and deploying text-processing pipelines.
+    I am a geographer that fell in love with spatial data as a spatial data engineer. 
+    Eventually I wanted to advance my career and taught myself programming, data engineering and machine learning. 
+    I got a job with those skills and was able to sharpen them in a professional environment. 
+    Today I'm still learning and I really hope that never stops. 
 </div>
