--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -35,11 +35,11 @@ $font-size-sm:               $font-size-root * 0.875 !default;
 $font-size-xs:               $font-size-root * 0.75 !default;
 
 $font-size-h1:               2rem !default;
-$font-size-h2:               1.75rem !default;
-$font-size-h3:               1.5rem !default;
-$font-size-h4:               1.25rem !default;
-$font-size-h5:               1.15rem !default;
-$font-size-h6:               1rem !default;
+$font-size-h2:               1.5rem !default;
+$font-size-h3:               1.25rem !default;
+$font-size-h4:               1.0rem !default;
+$font-size-h5:               0.9rem !default;
+$font-size-h6:               0.8rem !default;
 
 $base-line-height:            1.5;
 $base-space-unit:             1.5em;
@@ -55,11 +55,12 @@ $text-color:       rgba(0, 0, 0, 0.87) !default;
 $background-color: #7D46EB;
 
 $white:            #fff;
-$primary:          #F5A623;
-$secondary:        #8d7edc;
+$primary:         rgb(204, 50, 235);
+$secondary:        #fff;
+$secondary-date:        #000;
 $success:          #65e892;
 $danger:           #f83e4b;
-$warning:          #F5A623;
+$warning:         rgb(204, 50, 235);
 $info:             #09ABF6;
 
 // Tables
