dracula-rify the theme

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -52,15 +52,15 @@ $hr-border-width:             $border-width;
 //
 
 $text-color:       rgba(0, 0, 0, 0.87) !default;
-$background-color: #7D46EB;
+$background-color: #282A36;
 
-$white:            #fff;
-$primary:         rgb(204, 50, 235);
+$white:            #f8f8f2;
+$primary:         #FF79C6;
 $secondary:        #fff;
 $secondary-date:        #000;
 $success:          #65e892;
 $danger:           #f83e4b;
-$warning:         rgb(204, 50, 235);
+$warning:         #50FA7B;
 $info:             #09ABF6;
 
 // Tables
