--- a/_sass/components/_typography.scss
+++ b/_sass/components/_typography.scss
@@ -26,6 +26,7 @@ blockquote {
   padding-left: 20px;
   font-style: italic;
   border-left: 5px solid $secondary;
+  border-color: #6272a4;
 }
 
 //
