--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -56,7 +56,7 @@ $background-color: #282A36;
 
 $white:            #f8f8f2;
 $primary:         #FF79C6;
-$secondary:        #fff;
+$secondary:        #ff79c6;
 $secondary-date:        #000;
 $success:          #65e892;
 $danger:           #f83e4b;
