--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://github.com/renyuanz/leonids/">leonids</a>
-</footer>
+{% include svg-icons.html %}
+
+{% if site.footer-text %}
+<p>{{ site.footer-text }}</p>
+{% endif %}
