--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,33 +1,29 @@
-<nav class="post-navigation" role="navigation">
-  <div class="row">
-    <div class="col s5">
-      <div class="post-nav-prev">
-        {% if page.previous %}
-        <a href="{{ site.url }}{{ page.previous.url }}" title="{{ page.previous.title | escape }}">
-          <div class="post-nav-btn">
-            <div class="post-nav-text"><span class="danger-text-color"><i class="fa fa-angle-left"></i> ~ </span><span class="hidden-md primary-text-color">{{ page.previous.title }}</span></div>
-          </div>
-        </a>
-        {% endif %}
-      </div>
+<div class="wrapper-sidebar">
+  <header class="sidebar clearfix">
+    <div class="site-info">
+      {% if site.avatar %}
+        <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+      {% endif %} 
+      <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+      <p class="site-description">{{ site.description }}</p>
     </div>
-    <div class="col s2">
-      <a href="{{ site.url }}/">
-        <div class="leonids-icon">
-          <i class="fa fa-leaf"></i>
-        </div>
-      </a>
-    </div>
-    <div class="col s5 right">
-      <div class="post-nav-next">
-        {% if page.next %}
-        <a href="{{ site.url }}{{ page.next.url }}" title="{{ page.previous.title | escape }}">
-          <div class="post-nav-btn">
-            <div class="post-nav-text"><span class="hidden-md primary-text-color">{{ page.next.title }}</span><span class="success-text-color"> ~ <i class="fa fa-angle-right"></i></span></div>
-          </div>
-        </a>
-        {% endif %}
-      </div>
-    </div>
+  </header>
+
+  <div class="navlist">
+    <nav>
+      {% for nav in site.navigation %}
+      {% if nav.url contains 'http://' or nav.url contains 'https://' %}
+      <a href="{{ nav.url }}">{{ nav.name }}</a>
+      {% else %}
+      <a href="{{ site.baseurl }}{{ nav.url }}">{{ nav.name }}</a>
+      {% endif %}
+      {% endfor %}
+    </nav>
   </div>
-</nav>
+
+  <div class="wrapper-footer-desktop">
+    <footer class="footer">
+      {% include footer.html %}
+    </footer>
+  </div>
+</div>
