--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  {% include head.html %}
+  <body>
+    {% include nav.html %}
 
-{% include head.html %}
+    {% if page.toc==true %}
+      <aside class="toc">
+        {% include toc.html html=content %}
+      </aside>
+    {% endif %}
 
-<body>
-  <div class="row">
-    <div class="col s12 m3">
-      <div class="table cover">
-        {% include sidebar.html %}
-      </div>
-    </div>
-    <div class="col s12 m9">
-      <div class="post-listing">
+    <div id="main" role="main" class="wrapper-content">
+      <div class="container">
         {{ content }}
-        {% include footer.html %}
       </div>
     </div>
-  </div>
-  {% include js.html %}
-</body>
+
+    {% include analytics.html %}
+  </body>
+
+  {% if page.toc==true %}
+  <script>
+    document.getElementById("main").classList.add("withtoc");
+  </script>
+  {% endif %}
+
+  <div class="wrapper-footer-mobile">
+    <footer class="footer">
+      {% include footer.html %}
+    </footer>
+
+
 </html>
