--- a/style.scss
+++ b/style.scss
@@ -270,6 +270,13 @@ img {
   border-radius: 5px;
 }
 
+img.emoji {
+  display: inline;
+  height: 1em;
+  width: 1em;
+  margin-bottom: 0.0em;
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
