--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@ layout: compress
   <body>
     <main role="main">
 	    
-	    {% include navigation.html %}
+      {% include navigation.html %}
+      {% include analytics.html %}
 	    
         {{ content }}
         	    
