--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 
 <section class="post">
   <h2>{{ page.title }}</h2>
+
+  {% include analytics.html %}
+  
   {{ content }}
 </section>
 
