feat: change til subpage

--- a/_layouts/til.html
+++ b/_layouts/til.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <section class="posts">
-<h1>TIL</h1>
+<h1>today I learned</h1>
+<p>
     <ul>
       {% for post in site.posts %}
       {% if post.tags contains 'til' %}
